WAM-Studio-SF-Build/force-app/main/default/objects/AI_Conversation__c/AI_Conversation__c.object-meta.xml
<CustomObject>
    <description>Turn-by-turn conversation transcript for an AI Agent Run. Part of Salesforce Wealth AI Studio.</description>
    <label>AI Conversation</label>
    <nameField>
        <displayFormat>CONV-{000000}</displayFormat>
        <label>AI Conversation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>