WAM-Studio-SF-Build/force-app/main/default/objects/AI_Conversation__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>