WAM-Studio-SF-Build/force-app/main/default/objects/AI_Conversation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>user</fullName><default>true</default><label>user</label></value>
            <value><fullName>assistant</fullName><default>false</default><label>assistant</label></value>
            <value><fullName>system</fullName><default>false</default><label>system</label></value>
            <value><fullName>tool</fullName><default>false</default><label>tool</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>